--- a/SPOTIFYCLONE/index.html
+++ b/SPOTIFYCLONE/index.html
@@ -187,7 +187,11 @@
 
                 </div>
 
-                <div class="playbar">
+                <div class="playbar invert">
+
+                    <div class="seekbar">
+                        <div class="circle"></div>
+                    </div>
 
                     <div class="songinfo">
 
